# kubectl-rsh

./: Cargo.toml  LICENSE  Makefile  README.md  krew-manifest.yaml
.github/workflows/: main.yml  release.yml
src/: cli_args.rs  lib.rs  main.rs  terminal.rs
