[package]
name = "kubectl-rsh"
version = "0.1.0" ###
edition = "2021"
authors = ["Philippe Vlérick <philippe.vlerick@worldline.com>"]
license = "MIT"
description = "kubectl extension to open a shell session to a container in a pod"
repository = "https://github.com/worldline/kubectl-rsh"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kubectl-rsh"

[dependencies]
tokio = { version = "1.37.0", features = [ "macros", "rt-multi-thread" ] }
tokio-stream = { version = "0.1.15", features = ["signal"] }
clap = { version = "4.5.17", features = ["default", "cargo"] }
nix = { version = "0.29.0", features = ["term", "process", "ioctl"] }
kube = { version = "0.92.0", features = ["ws", "socks5", "http-proxy"] }
k8s-openapi = { version = "0.22.0", features = [ "latest" ] }
http = "1.1.0"
log = "0.4.21"
env_logger = "0.11.3"
futures-channel = "0.3.30"
